--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
       - .:/usr/src/app
     ports:
       - ${STELLAR_EXTERNAL_PORT:-8000}:8000
+    depends_on:
+      - postgres
+      - redis
     command: python stellar/manage.py runserver 0.0.0.0:8000
 
   postgres:
